java 11 -> 8 issues